[package]
name = "farmhand"
version = "0.1.0"
authors = ["crypto_gohan <crypto_gohan@protonmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
cached = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
surf = "2.2.0"
tide = "0.16.0"
chrono = "0.4.19"
serde_json = "1.0.64"
