[package]
name = "farmhand"
version = "0.1.0"
authors = ["crypto_gohan <crypto_gohan@protonmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
cached = "0.23.0"
chrono = "0.4.19"
lru = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
surf = "2.2.0"
tide = "0.16.0"
